Remove CodePen from title

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
 
-    <title>CodePen - Wicked Witches Ltd.</title>
+    <title>Wicked Witches Ltd.</title>
     <style>
       @import url("https://fonts.cdnfonts.com/css/horror");
       @import url("https://fonts.googleapis.com/css2?family=Nunito&family=Saira+Extra+Condensed:wght@100;400&family=Shizuru&display=swap");
